[package]
name = "jpegview-rust"
version = "0.3.0"
authors = ["autergame"]

[dependencies]
native-dialog = "0.6.3"
miniz_oxide = "0.6.2"
threadpool = "1.8.1"
bincode = "1.3.3"
serde = { version = "1.0.151", features = ["derive"] }
image = "0.24.5"
sha2 = "0.10.6"

gl = "0.14.0"
glfw = { version = "0.47.0", default-features = false, features = ["glfw-sys"] }

imgui = { version = "0.9.0", features = ["docking"] }

fast-generated-dct = { git = "https://github.com/autergame/Fast-DCT-Generator-Rust", version = "0.1.0" }

[profile.dev.package.fast-generated-dct]
opt-level = 3
strip = true
debug = false
incremental = false
overflow-checks = false
debug-assertions = false

[profile]
release = { strip = true }
release-with-debug = { inherits = "release", debug = true }